adding back in home page and new images

--- a/photos.html
+++ b/photos.html
@@ -82,6 +82,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse centered">
           	<ul class="nav navbar-nav centered">
+              <li><a href="index.html" title="Home">Home</a></li>
               <li><a href="aboutus.html" title="Our Story">Our Story</a></li>
               <li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
               <li><a href="wedding.html" title="Wedding">Weekend Details</a></li>
@@ -124,42 +125,78 @@
 
 
   <section id="travel" name="travel"></section>
-  <div id="sectionwrap" class="top-edge-shadow topsection">
+  <div id="sectionwrap" style="color:#fff;" class="top-edge-shadow topsection">
     <div class="row">
-     <div class="col-lg-11 col-lg-offset-1">
+     <div class="col-lg-11">
       <h1>Photos</h1><hr class="whitebackground">
     </div>
   </div>
 
   <div class="container">
+    
+    <br />
     <div class="row">
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 1" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am1.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am2.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am3.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am4.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am5.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 6" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am6.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 7" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am7.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 8" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am8.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 9" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am9.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 10" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am10.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 11" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am11.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 12" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am12.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am13.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 14" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am14.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 15" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am15.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 16" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am16.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 17" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am17.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 18" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am18.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 19" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am19.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 20" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am20.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 21" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am21.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 22" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am22.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 23" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am23.JPG"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 24" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am24.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-1 polaroid" title="Image 1" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am1.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-2 polaroid" title="Image 2" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am2.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-3 polaroid" title="Image 3" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am3.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-4 polaroid" title="Image 4" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am4.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-5 polaroid" title="Image 5" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am5.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-6 polaroid" title="Image 6" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am6.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-7 polaroid" title="Image 7" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am7.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-8 polaroid" title="Image 8" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am8.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-9 polaroid" title="Image 9" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am9.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-10 polaroid" title="Image 10" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am10.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-11 polaroid" title="Image 11" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am11.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-12 polaroid" title="Image 12" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am12.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-13 polaroid" title="Image 13" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am13.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-14 polaroid" title="Image 14" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am14.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-15 polaroid" title="Image 15" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am15.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-16 polaroid" title="Image 16" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am16.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-17 polaroid" title="Image 17" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am17.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-18 polaroid" title="Image 18" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am18.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-19 polaroid" title="Image 19" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am19.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-20 polaroid" title="Image 20" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am20.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-21 polaroid" title="Image 21" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am21.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-22 polaroid" title="Image 22" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am22.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-23 polaroid" title="Image 23" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am23.JPG"></a></div>
+      <div class="col-xs-6"><a class="pic-24 polaroid" title="Image 24" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am24.JPG"></a></div>
+    </div>
 
+  <br /><br />
+  <!--
+  <div class="row">
+    <div class="centered">
+      <ul class="photogallery">
+        <li><a href="#" class="pic-1" title="Image 1"><img class="thumbnail photogalleryimg" src="assets/img/photos/am1.JPG" alt="Photograph of a waterfall" /></a></li>
+        <li><a href="#" class="pic-2" title="Image 2"><img class="thumbnail photogalleryimg" src="assets/img/photos/am2.JPG" alt="Photograph of clouds and sunlight" /></a></li>
+        <li><a href="#" class="pic-3" title="Image 3"><img class="thumbnail photogalleryimg" src="assets/img/photos/am3.JPG" alt="Photograph of a lake scene at dusk" /></a></li>
+        <li><a href="#" class="pic-4" title="Image 4"><img class="thumbnail photogalleryimg" src="assets/img/photos/am4.JPG" alt="Photograph of a tree and green grass" /></a></li>
+        <li><a href="#" class="pic-5" title="Image 5"><img class="thumbnail photogalleryimg" src="assets/img/photos/am5.JPG" alt="Photograph of a beach sunset" /></a></li>
+        <li><a href="#" class="pic-6" title="Image 6"><img class="thumbnail photogalleryimg" src="assets/img/photos/am6.JPG" alt="Photograph of a flower and lake" /></a></li>
+        <li><a href="#" class="pic-7" title="Image 7"><img class="thumbnail photogalleryimg" src="assets/img/photos/am7.JPG" alt="Photograph of a waterfall" /></a></li>
+        <li><a href="#" class="pic-8" title="Image 8"><img class="thumbnail photogalleryimg" src="assets/img/photos/am8.JPG" alt="Photograph of clouds and sunlight" /></a></li>
+        <li><a href="#" class="pic-9" title="Image 9"><img class="thumbnail photogalleryimg" src="assets/img/photos/am9.JPG" alt="Photograph of a lake scene at dusk" /></a></li>
+        <li><a href="#" class="pic-10" title="Image 10"><img class="thumbnail photogalleryimg" src="assets/img/photos/am10.JPG" alt="Photograph of a tree and green grass" /></a></li>
+        <li><a href="#" class="pic-11" title="Image 11"><img class="thumbnail photogalleryimg" src="assets/img/photos/am11.JPG" alt="Photograph of a beach sunset" /></a></li>
+        <li><a href="#" class="pic-12" title="Image 12"><img class="thumbnail photogalleryimg" src="assets/img/photos/am12.JPG" alt="Photograph of a flower and lake" /></a></li>
+        <li><a href="#" class="pic-13" title="Image 13"><img class="thumbnail photogalleryimg" src="assets/img/photos/am13.JPG" alt="Photograph of a waterfall" /></a></li>
+        <li><a href="#" class="pic-14" title="Image 14"><img class="thumbnail photogalleryimg" src="assets/img/photos/am14.JPG" alt="Photograph of clouds and sunlight" /></a></li>
+        <li><a href="#" class="pic-15" title="Image 15"><img class="thumbnail photogalleryimg" src="assets/img/photos/am15.JPG" alt="Photograph of a lake scene at dusk" /></a></li>
+        <li><a href="#" class="pic-16" title="Image 16"><img class="thumbnail photogalleryimg" src="assets/img/photos/am16.JPG" alt="Photograph of a tree and green grass" /></a></li>
+        <li><a href="#" class="pic-17" title="Image 17"><img class="thumbnail photogalleryimg" src="assets/img/photos/am17.JPG" alt="Photograph of a beach sunset" /></a></li>
+        <li><a href="#" class="pic-18" title="Image 18"><img class="thumbnail photogalleryimg" src="assets/img/photos/am18.JPG" alt="Photograph of a flower and lake" /></a></li>
+        <li><a href="#" class="pic-19" title="Image 19"><img class="thumbnail photogalleryimg" src="assets/img/photos/am19.JPG" alt="Photograph of a waterfall" /></a></li>
+        <li><a href="#" class="pic-20" title="Image 20"><img class="thumbnail photogalleryimg" src="assets/img/photos/am20.JPG" alt="Photograph of clouds and sunlight" /></a></li>
+        <li><a href="#" class="pic-21" title="Image 21"><img class="thumbnail photogalleryimg" src="assets/img/photos/am21.JPG" alt="Photograph of a lake scene at dusk" /></a></li>
+        <li><a href="#" class="pic-22" title="Image 22"><img class="thumbnail photogalleryimg" src="assets/img/photos/am22.JPG" alt="Photograph of a tree and green grass" /></a></li>
+        <li><a href="#" class="pic-23" title="Image 23"><img class="thumbnail photogalleryimg" src="assets/img/photos/am23.JPG" alt="Photograph of a beach sunset" /></a></li>
+        <li><a href="#" class="pic-24" title="Image 24"><img class="thumbnail photogalleryimg" src="assets/img/photos/am24.JPG" alt="Photograph of a flower and lake" /></a></li>
+      </ul>
     </div>
   </div>
+  -->
+
+</div>
 </div>
 </div>
 
