--- a/registry.html
+++ b/registry.html
@@ -82,6 +82,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse centered">
        <ul class="nav navbar-nav centered">
+        <li><a href="index.html" title="Home">Home</a></li>
         <li><a href="aboutus.html" title="Our Story">Our Story</a></li>
         <li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
         <li><a href="wedding.html" title="Wedding">Weekend Details</a></li>
