--- a/thingstodo.html
+++ b/thingstodo.html
@@ -82,6 +82,7 @@
   				</div>
   				<div id="navbar" class="navbar-collapse collapse centered">
   					<ul class="nav navbar-nav centered">
+  						<li><a href="index.html" title="Home">Home</a></li>
   						<li><a href="aboutus.html" title="Our Story">Our Story</a></li>
   						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
   						<li><a href="wedding.html" title="Wedding">Weekend Details</a></li>
@@ -403,6 +404,12 @@
 						<b>Admission</b><br/>
 						You can purchase a ticket on their website <a href="https://www.spymuseum.org/tickets/">spymuseum.org/tickets/</a>
 					</div><br />
+				</div>
+				<br />
+				<div class="row">
+					<div class="centered">
+						<h5>For more sights and restaurants, please go to <a href="https://washington.org/things-do-washington-dc">washington.org</a></h5>
+					</div>
 				</div>
 				
 			</div>
