more kathie changes

--- a/wedding.html
+++ b/wedding.html
@@ -176,7 +176,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Saint Patrick's Church <br />619 10th Street <br />NW Washington, DC
+						<b>Saint Patrick's Church</b> <br />619 10th Street <br />NW Washington, DC
 					</div><br />
 				</div>
 				<hr class="datedivider">
@@ -193,7 +193,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Old Post Office Pavilion<br />Presidential Ballroom <br />1100 Pennsylvania Avenue<br /> Washington, DC<br /><br /> <b>Attire: Black Tie</b>
+						<b>Old Post Office Pavilion</b><br />Presidential Ballroom <br />1100 Pennsylvania Avenue<br /> Washington, DC<br /><br /> <b>Attire: Black Tie</b>
 					</div>
 					<br />
 				</div>
