--- a/thingstodo.html
+++ b/thingstodo.html
@@ -274,6 +274,23 @@
 				<hr class="datedivider">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
+						<h4>Folger Shakespeare Library</h4>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						Home to the world's largest Shakespeare collection and to major collections of other rare Renaissance books, manuscripts, and works of art, the Folger serves a wide audience of scholars, visitors, teachers, students, families, and theater-goers. 
+					</div>
+				</div><br />
+
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<b>Hours of Operation</b><br/>
+						For the building and exhibitions, Monday—Saturday: 10:00am – 5:00pm, Sunday: noon – 5:00 pm. For more information, you can visit their site  <a href="http://www.folger.edu/">folger.edu</a><br /><br /> 
+					</div><br />
+				</div>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
 						<h4>Arlington National Cemetery</h4>
 					</div>
 				</div>
