--- a/weddingparty.html
+++ b/weddingparty.html
@@ -85,7 +85,7 @@
 				case 'Alex Corbutt':
 				var bodytext = "Alex and Allie, &#x201c;Double Al&#x201d; is what our parents call us. We met freshman year of high school and have been in each other&#x2019;s lives ever since. One of the things I love about our friendship is the ability to laugh at ourselves and at each other.  We have been lucky enough to travel with each other&#x2019;s families over the years, and it's always easy. We both have a great love for Ocean City, hers in New Jersey, mine in Maryland. Our mutual love for the beach has created some memorable trips and lots of laughs. A common theme here is laughter; Allie&#x2019;s sense of humor is only surpassed by her insane knowledge of sports, which I love. <br/><br/>LOOOOOOVE YOU!!!!!";
 				break;
-				case 'Danielle Caroll':
+				case 'Danielle Carroll':
 				var bodytext = "You know the saying &quot;God made us cousins because they couldn't handle us as sisters&quot;, well this is certainly true for us. Between pacifier hoarding to summers at the shore to Disney trips to being able to stand by your side on the best day of your life; I couldn't imagine my life without the best cousin and friend anyone could ask for. Love you! ";
 				break;
 				case 'Danielle Mathewson':
@@ -221,32 +221,8 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="alexmodalbutton" data-toggle="modal" data-target="#alexmodal" title="Alex Corbutt"><img class="imgcell imagedropshadow" src="assets/img/photos/alex_320x320.jpg"/></a>
-					<h4>Alex Corbutt</h4><h5>Friend</h5>
-					<br />
-				</div>
-				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="benmodalbutton" data-toggle="modal" data-target="#benmodal" title="Benjamin Levine"><img class="imgcell imagedropshadow" src="assets/img/photos/ben_320x320.jpg"/></a>
-					<h4>Benjamin Levine</h4><h5>Friend</h5>
-					<br />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="daniellemodalbutton" data-toggle="modal" data-target="#daniellemodal" title="Danielle Caroll"><img class="imgcell imagedropshadow" src="assets/img/photos/danielle_320x320.jpg"/></a>
-					<h4>Danielle Caroll</h4><h5>Cousin of the Bride</h5>
-					<br />
-				</div>
-				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="chaddmodalbutton" data-toggle="modal" data-target="#chaddmodal" title="Chadd Hippensteel"><img class="imgcell imagedropshadow" src="assets/img/photos/chadd_320x320.jpg"/></a>
-					<h4>Chadd Hippensteel</h4><h5>Cousin of the Groom</h5>
-					<br />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="mathewsonmodalbutton" data-toggle="modal" data-target="#mathewsonmodal" title="Danielle Mathewson"><img class="imgcell imagedropshadow" src="assets/img/photos/mathewson_320x320.jpg"/></a>
-					<h4>Danielle Mathewson</h4><h5>Friend</h5>
+					<a href="#" id="daniellemodalbutton" data-toggle="modal" data-target="#daniellemodal" title="Danielle Carroll"><img class="imgcell imagedropshadow" src="assets/img/photos/danielle_320x320.jpg"/></a>
+					<h4>Danielle Carroll</h4><h5>Cousin of the Bride</h5>
 					<br />
 				</div>
 				<div class="col-xs-6 centered photodiv">
@@ -257,8 +233,8 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="juilamodalbutton" data-toggle="modal" data-target="#juliamodal" title="Julia Guimond"><img class="imgcell imagedropshadow" src="assets/img/photos/julia_320x320.jpg"/></a>
-					<h4>Julia Guimond</h4><h5>Cousin of the Groom</h5>
+					<a href="#" id="alexmodalbutton" data-toggle="modal" data-target="#alexmodal" title="Alex Corbutt"><img class="imgcell imagedropshadow" src="assets/img/photos/alex_320x320.jpg"/></a>
+					<h4>Alex Corbutt</h4><h5>Friend</h5>
 					<br />
 				</div>
 				<div class="col-xs-6 centered photodiv">
@@ -269,8 +245,8 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="webbmodalbutton" data-toggle="modal" data-target="#webbmodal" title="Julianne Webb"><img class="imgcell imagedropshadow" src="assets/img/photos/webb_320x320.jpg"/></a>
-					<h4>Julianne Webb</h4><h5>Cousin of the Bride</h5>
+					<a href="#" id="juilamodalbutton" data-toggle="modal" data-target="#juliamodal" title="Julia Guimond"><img class="imgcell imagedropshadow" src="assets/img/photos/julia_320x320.jpg"/></a>
+					<h4>Julia Guimond</h4><h5>Cousin of the Groom</h5>
 					<br />
 				</div>
 				<div class="col-xs-6 centered photodiv">
@@ -281,8 +257,8 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="laynemodalbutton" data-toggle="modal" data-target="#laynemodal" title="Layne Starkey"><img class="imgcell imagedropshadow" src="assets/img/photos/layne_320x320.jpg"/></a>
-					<h4>Layne Starkey</h4><h5>Friend</h5>
+					<a href="#" id="meghanmodalbutton" data-toggle="modal" data-target="#meghanmodal" title="Meghan Kane"><img class="imgcell imagedropshadow" src="assets/img/photos/meghan_320x320.jpg"/></a>
+					<h4>Meghan Kane</h4><h5>Friend</h5>
 					<br />
 				</div>
 				<div class="col-xs-6 centered photodiv">
@@ -293,8 +269,33 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6 centered photodiv">
-					<a href="#" id="meghanmodalbutton" data-toggle="modal" data-target="#meghanmodal" title="Meghan Kane"><img class="imgcell imagedropshadow" src="assets/img/photos/meghan_320x320.jpg"/></a>
-					<h4>Meghan Kane</h4><h5>Friend</h5>
+					<a href="#" id="mathewsonmodalbutton" data-toggle="modal" data-target="#mathewsonmodal" title="Danielle Mathewson"><img class="imgcell imagedropshadow" src="assets/img/photos/mathewson_320x320.jpg"/></a>
+					<h4>Danielle Mathewson</h4><h5>Friend</h5>
+					<br />
+				</div>
+				<div class="col-xs-6 centered photodiv">
+					<a href="#" id="chaddmodalbutton" data-toggle="modal" data-target="#chaddmodal" title="Chadd Hippensteel"><img class="imgcell imagedropshadow" src="assets/img/photos/chadd_320x320.jpg"/></a>
+					<h4>Chadd Hippensteel</h4><h5>Cousin of the Groom</h5>
+					<br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 centered photodiv">
+					<a href="#" id="laynemodalbutton" data-toggle="modal" data-target="#laynemodal" title="Layne Starkey"><img class="imgcell imagedropshadow" src="assets/img/photos/layne_320x320.jpg"/></a>
+					<h4>Layne Starkey</h4><h5>Friend</h5>
+					<br />
+				</div>
+				
+				<div class="col-xs-6 centered photodiv">
+					<a href="#" id="benmodalbutton" data-toggle="modal" data-target="#benmodal" title="Benjamin Levine"><img class="imgcell imagedropshadow" src="assets/img/photos/ben_320x320.jpg"/></a>
+					<h4>Benjamin Levine</h4><h5>Friend</h5>
+					<br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 centered photodiv">
+					<a href="#" id="webbmodalbutton" data-toggle="modal" data-target="#webbmodal" title="Julianne Webb"><img class="imgcell imagedropshadow" src="assets/img/photos/webb_320x320.jpg"/></a>
+					<h4>Julianne Webb</h4><h5>Cousin of the Bride</h5>
 					<br />
 				</div>
 				<div class="col-xs-6 centered photodiv">
