addmission is FREEE

--- a/thingstodo.html
+++ b/thingstodo.html
@@ -279,7 +279,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Home to the world's largest Shakespeare collection and to major collections of other rare Renaissance books, manuscripts, and works of art, the Folger serves a wide audience of scholars, visitors, teachers, students, families, and theater-goers. 
+						Home to the world's largest Shakespeare collection and to major collections of other rare Renaissance books, manuscripts, and works of art, the Folger serves a wide audience of scholars, visitors, teachers, students, families, and theater-goers.
 					</div>
 				</div><br />
 
@@ -287,6 +287,8 @@
 					<div class="col-xl-1 col-centered">
 						<b>Hours of Operation</b><br/>
 						For the building and exhibitions, Monday—Saturday: 10:00am – 5:00pm, Sunday: noon – 5:00 pm. For more information, you can visit their site  <a href="http://www.folger.edu/">folger.edu</a><br /><br /> 
+						<b>Admission</b><br/>
+						Free
 					</div><br />
 				</div>
 				<div class="row">
