--- a/welcomepartyrsvp.html
+++ b/welcomepartyrsvp.html
@@ -128,7 +128,7 @@
 				<h1>RSVP to Welcome Party</h1><hr class="whitebackground">
 			</div>
 		</div>
-		<form data-toggle="validator" role="form">
+		<form data-toggle="validator" role="form" action="welcomersvp.php" method="post">
 			<div class="form-group">
 				<label for="first_name" class="control-label">First Name</label>
 				<input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" required>
