change location of welcome party to Patton room

--- a/wedding.html
+++ b/wedding.html
@@ -149,7 +149,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Old Post Office Pavilion<br />Franklin Study<br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
+						Old Post Office Pavilion<br />Patton Room<br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
 					</div>
 					<br />
 				</div>
