change trump name

--- a/travelaccommodations.html
+++ b/travelaccommodations.html
@@ -157,7 +157,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xl-1 col-centered"> <br />
-					We have reserved a block of rooms at (aka The Trump Hotel DC). The rooms are available for Friday and Saturday nights starting at $350/night (plus tax) if you book before October 5, 2017. To make reservations, click the Website button above or call 855-878-6700&#x00a0;and reference the Allie Williams and Matt Slocum wedding block.&#x00a0;<br/>
+					We have reserved a block of rooms at (aka The Trump International Hotel Washington D.C.). The rooms are available for Friday and Saturday nights starting at $350/night (plus tax) if you book before October 5, 2017. To make reservations, click the Website button above or call 855-878-6700&#x00a0;and reference the Allie Williams and Matt Slocum wedding block.&#x00a0;<br/>
 				</div><br />
 			</div>
 			<br /><br />
