--- a/wedding.html
+++ b/wedding.html
@@ -149,7 +149,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Old Post Office Pavilion<br />Patton Room<br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
+						<b>Old Post Office Pavilion</b><br />Patton Room<br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
 					</div>
 					<br />
 				</div>
@@ -213,7 +213,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						We don't want the weekend to end, so please join us for brunch.<br /><br />Old Post Office Pavilion<br />Lincoln Library<br />1100 Pennsylvania Avenue<br /> Washington, DC
+						We don't want the weekend to end, so please join us for brunch.<br /><br /><b>Old Post Office Pavilion<b/><br />Lincoln Library<br />1100 Pennsylvania Avenue<br /> Washington, DC
 					</div>
 				</div>
 			</div>
