--- a/contactus.html
+++ b/contactus.html
@@ -125,7 +125,7 @@
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11">
-				<h1>RSVP to Welcome Party</h1><hr class="whitebackground">
+				<h1>Contact Allie and Matt</h1><hr class="whitebackground">
 			</div>
 		</div>
 		<form data-toggle="validator" role="form" action="welcomersvp.php" method="post">
@@ -148,7 +148,7 @@
 			</div>
 			<div class="form-group">
 				<label for="comments" class="control-label">Comments</label>
-				<input type="text" class="form-control" id="comments" name="comments" placeholder="Comments">
+				<input type="textarea" class="form-control" id="comments" name="comments" placeholder="Comments">
 			</div>
 			
 			<div class="form-group">
