adding contact us button

--- a/travelaccommodations.html
+++ b/travelaccommodations.html
@@ -135,7 +135,13 @@
 
 		<div class="container-fluid">
 
-
+			
+			<div class="row">
+				<div class="col-xl-1 col-centered">
+					<a href="mailto:alliemethermatt@gmail.com" type="button" class="btn btn-calendar"><b>Questions? Contact Allie & Matt</b></a><br /><br />
+				</div>
+			</div>
+			<hr class="datedivider">
 			<div class="row">
 				<div class="col-xl-1 col-centered">
 					<img class="imghotelcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
@@ -160,7 +166,7 @@
 					We have reserved a block of rooms at (aka The Trump International Hotel Washington D.C.). The rooms are available for Friday and Saturday nights starting at $350/night (plus tax) if you book before October 5, 2017. To make reservations, click the Website button above or call 855-878-6700&#x00a0;and reference the Allie Williams and Matt Slocum wedding block.&#x00a0;<br/>
 				</div><br />
 			</div>
-			<br /><br />
+			<hr class="datedivider">
 			<div class="row">
 				<div class="col-xl-1 col-centered">
 					<h4>JW Marriott Washington, DC</h4>
@@ -179,7 +185,7 @@
 					We have reserved a block of rooms at the JW Marriott. The rooms are available Thursday through Saturday nights starting at $209/night (plus tax) if you book before October 12, 2017. The hotel is located 0.4 mile from St. Patrick&#x2019;s Church, and 0.3 miles from the Old Post Office Pavilion, where the welcome party, wedding reception, and Sunday brunch will take place. To make reservations, click the Website button above, or call the hotel and reference the Williams/Slocum Wedding room block.<br/>
 				</div><br />
 			</div>
-			<br /><br />
+			<hr class="datedivider">
 			<div class="row">
 				<div class="col-xl-1 col-centered">
 					<h4>Grand Hyatt Washington</h4>
@@ -199,6 +205,13 @@
 				</div><br />
 			</div>
 		</div>
+		<hr class="datedivider">
+		<div class="row">
+			<div class="col-xl-1 col-centered">
+				<a href="mailto:alliemethermatt@gmail.com" type="button" class="btn btn-calendar"><b>Questions? Contact Allie & Matt</b></a><br /><br />
+			</div>
+		</div>
+
 
 		<div class="container-fluid fullsection">
 			<div class="row">
