--- a/wedding.html
+++ b/wedding.html
@@ -126,7 +126,7 @@
 				<div class="row">
 					<div class="col-xl-1 col-centered">
 						<br />
-						<a href="assets/other/alliemattwedding.ics" type="button" class="btn btn-calendar"><b>Add Events To Calendar</b> &nbsp; <i class="icon-calendar"></i></a><br /><br />
+						<a href="assets/other/alliemattwedding.ics" type="button" class="btn btn-calendar"><b>Add Events To Calendar</b> &nbsp; <i class="icon-calendar"></i></a>  <br /><br /><a href="mailto:alliemethermatt@gmail.com" type="button" class="btn btn-calendar"><b>Questions? Contact Allie & Matt</b></a><br /><br />
 					</div>
 				</div>
 				<hr class="datedivider">
@@ -216,6 +216,14 @@
 						We don't want the weekend to end, so please join us for brunch.<br /><br /><b>Old Post Office Pavilion<b/><br />Lincoln Library<br />1100 Pennsylvania Avenue<br /> Washington, DC
 					</div>
 				</div>
+				<hr class="datedivider">
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<br />
+						<a href="assets/other/alliemattwedding.ics" type="button" class="btn btn-calendar"><b>Add Events To Calendar</b> &nbsp; <i class="icon-calendar"></i></a>  <br /><br /><a href="mailto:alliemethermatt@gmail.com" type="button" class="btn btn-calendar"><b>Questions? Contact Allie & Matt</b></a><br /><br />
+					</div>
+				</div>
+				
 			</div>
 		</div>
 
